# sfmldemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
shaders/: crt.frag
src/: Asteroid.cpp  Asteroid.hpp  DualComplex.cpp  DualComplex.hpp  IObject.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  ResourceBank.cpp  ResourceBank.hpp  Scene.cpp  Scene.hpp  UI.cpp  UI.hpp  main.cpp
